# elba

./: .example.env  .gitignore  Dockerfile  README.md  compose-test.yml  compose.yml  env.example.txt  github-workflow.yml  github_workflow.sh  run_dev_env.sh  test_dev_env.sh
.github/workflows/: rust.yml
data_service/: .dockerignore  Cargo.toml  Dockerfile  rustfmt.toml
data_service/migrations/2024-04-28-225009_create_match_data/: down.sql  up.sql
data_service/src/: lib.rs  main.rs  schema.rs  types.rs
data_service/src/common/: get_api_key.rs  mod.rs  riot_api_layer.rs
data_service/src/database/: database_client.rs  models.rs
data_service/src/handlers/: crawl_riot_id_task_handler.rs  match_id_task_handler.rs  mod.rs
data_service/src/match_processing/: match_parser.rs  match_processor.rs  mod.rs
data_service/src/match_processing/test_data/: test_match_1.txt  test_match_timeline_1.txt
data_service/src/queues/: queue.rs
data_service/tests/: integration_test.rs
data_service/tests/common/: mod.rs
data_service/tests/queues/: mod.rs  queue_test.rs
database/: Dockerfile  init.sql
