[package]
name = "data_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riven = "2.43.0"
tokio = { version = "1.37.0", features = ["full"] }
diesel = { version = "2.1.6", features = ["postgres"] }
serde = "1.0.199"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
